src/objects/vlocity_ins__DRMatchingKey__mdt.object
<CustomObject>
    <fields>
        <fullName>vlocity_ins__CompositeUniqueFieldName__c</fullName>
        <description>(Optional) The name of a unique field on the object which stores the concatenated user key values to enforce the uniqueness of this user key.</description>
        <label>Composite Unique Field</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__MatchingKeyFields__c</fullName>
        <description>Comma-delimited list of Field API names which identify the set of fields that make up the key.</description>
        <label>Matching Key Fields</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__MatchingKeyObject__c</fullName>
        <description>Name of the object to use for matching. Used to support looking up the Id of an object from a child object or other related object. For example, looking up the Account Id by Party Number.</description>
        <label>Matching Key Object</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__ObjectAPIName__c</fullName>
        <description>The API name of the Salesforce or custom object to which the user key applies.</description>
        <label>Object API Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__ReturnKeyField__c</fullName>
        <description>The field in the Matching Key Object which returns the Id of the match.</description>
        <label>Return Key Field</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Vlocity Matching Key</label>
    <pluralLabel>Vlocity Matching Keys</pluralLabel>
</CustomObject>